--- a/warsow.html
+++ b/warsow.html
@@ -1,18 +1,20 @@
 <html>
 	<head>
+		<meta http-equiv=”refresh” content=”10" />   <!-- this is going to refresh the page every 10 seconds....comment out when not working on the page! -->
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="main.css">
+		<link rel="stylesheet" type="text/css" href="cudacss.css">
 		<title> Great Big Chance</title>
-		<link rel="shortcut icon" href="F:\Doc programs\Cuda's\logo.png" />
+		<link rel="shortcut icon" href="F:\Doc programs\Cuda's\logo.png" /> <!-- change the file location please -->
 	</head>
 	<body>
 		<div class="motherfreakentitle">
-			<p style=center>
+			<p style="center">
 				<h1>The Great Big Chance.</h1>
 			<br>
-				
+				May or may not be an inappropriate reference.
+			</p>
 		</div>
 		<div class="sidenavbar">
 		</div>
