--- a/warsow.html
+++ b/warsow.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<meta http-equiv=”refresh” content=”10" />   <!-- this is going to refresh the page every 10 seconds....comment out when not working on the page! -->
+		<meta http-equiv="refresh" content="5" />   <!-- this is going to refresh the page every 10 seconds....comment out when not working on the page! -->
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,6 +17,9 @@
 			</p>
 		</div>
 		<div class="sidenavbar">
+			<table>	
+				<tr><td><h3>Server Address,<br>http://104.131.236.69/</h3></td></tr>
+			</table>
 		</div>
 		<div class="slideshow">
 		</div>
